--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.7",
     "react-scripts": "1.0.13",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "shortid": "^2.2.8"
   },
   "scripts": {
     "start": "react-scripts start",
