--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.0.13",
     "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0",
     "shortid": "^2.2.8"
   },
   "scripts": {
